Fix layout issue inline lists in form

--- a/src/stylesheets/forms.styl
+++ b/src/stylesheets/forms.styl
@@ -56,6 +56,9 @@ button, .btn
 	form input[type=text]
 		width 500px
 
+	.timbuctoo-list-editor
+		display inline-block
+
 	.field
 		margin-bottom 1em
 
